--- a/registrador-backend/src/main/resources/application.properties
+++ b/registrador-backend/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=registrador-actividades
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://s17.infinitysrv.com:3306/celbitne_registrador-actividades
+spring.datasource.username=celbitne_desarrollo
+spring.datasource.password=creoDatos2024*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
