--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,11 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 tasks:
-  - init: npm install && npm run build
+  - init: |
+      sudo apt-get update
+      sudo apt-get install -y openjdk-17-jdk
+      sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-17-openjdk-amd64/bin/java 1
+      sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
+      echo "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> ~/.bashrc
+      npm install && npm run build
     command: npm run start
-
-
