--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,5 +11,7 @@ tasks:
       sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-17-openjdk-amd64/bin/java 1
       sudo update-alternatives --set java /usr/lib/jvm/java-17-openjdk-amd64/bin/java
       echo "export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> ~/.bashrc
+      source ~/.bashrc
+      java --version
       npm install && npm run build
     command: npm run start
